test/Fail/OverlapNonInstance1.agda
module OverlapNonInstance1 where

postulate X : Set
{-# OVERLAPPING X #-}
